<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_routine"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/routine" />

    <item
        android:id="@+id/navigation_user"
        android:icon="@drawable/baseline_person_24"
        android:title="@string/User" />

    <item
        android:id="@+id/navigation_calorietracker"
        android:icon="@drawable/baseline_food_bank_24"
        android:title="@string/CalorieTracker" />


    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/baseline_person_24"
        android:title="Profile Page" />

    <item
        android:id="@+id/navigation_user_routine"
        android:icon="@drawable/ic_add"
        android:title="Routines Created" />




</menu>