<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_routine">



    <fragment
        android:id="@+id/navigation_signin"
        android:name="sg.edu.np.mad.happyhabit.ui.SignIn.SignInFragment"
        android:label="@string/title_signin"
        tools:layout="@layout/fragment_signin" />
    <fragment
        android:id="@+id/navigation_signup"
        android:name="sg.edu.np.mad.happyhabit.ui.SignIn.SignUpFragment"
        android:label="@string/title_signin"
        tools:layout="@layout/fragment_sign_up" />
    <fragment
        android:id="@+id/navigation_captureImage"
        android:name="sg.edu.np.mad.happyhabit.ui.User.ProfilePic"
        android:label="@string/title_capture_image"
        tools:layout="@layout/capture_image" />
    <fragment
        android:id="@+id/navigation_routine"
        android:name="sg.edu.np.mad.happyhabit.ui.Routines.RoutineFragment"
        android:label="@string/title_activity_browsing_routine"
        tools:layout="@layout/activity_browsing_routine" >
        <action
            android:id="@+id/action_navigation_routine_to_navigation_routine_exercises"
            app:destination="@id/navigation_routine_exercises"
            app:enterAnim="@anim/nav_default_enter_anim" />
    </fragment>

    <fragment
        android:id="@+id/navigation_user"
        android:name="sg.edu.np.mad.happyhabit.ui.User.UserProfileFragment"
        android:label="@string/title_activity_user"
        tools:layout="@layout/activity_user_profile" />

    <fragment
        android:id="@+id/navigation_routine_exercises"
        android:name="sg.edu.np.mad.happyhabit.ui.Routines.ExercisesFragment"
        android:label="@string/title_activity_browsing_routine"
        tools:layout="@layout/fragment_exercises"
        />

    <fragment
        android:id="@+id/navigation_exno"
        android:name="sg.edu.np.mad.happyhabit.ui.Routines.exnoFragment"
        tools:layout="@layout/fragment_exno"
        />
    <fragment
        android:id="@+id/navigation_creation"
        android:name="sg.edu.np.mad.happyhabit.ui.Routines.RoutineCreationFragment"
        tools:layout="@layout/fragment_routine_creation"
        />


    <fragment
        android:id="@+id/navigation_profile"
        android:name="sg.edu.np.mad.happyhabit.ui.Profile.ProfileFragment"
        android:label="Profile Page"
        tools:layout="@layout/fragment_profile">
        <action
            android:id="@+id/action_navigation_profile_to_navigation_edit_profile"
            app:destination="@id/navigation_edit_profile"
            app:enterAnim="@anim/nav_default_enter_anim" />
    </fragment>

    <fragment
        android:id="@+id/navigation_edit_profile"
        android:name="sg.edu.np.mad.happyhabit.ui.Profile.EditProfileFragment"
        android:label="Edit Profile Page"
        tools:layout="@layout/fragment_edit_profile">
    </fragment>

    <fragment
        android:id="@+id/navigation_set_creation"
        android:name="sg.edu.np.mad.happyhabit.ui.Routines.SetCreation_Fragment"
        tools:layout="@layout/fragment_set_creation">
</fragment>
    <fragment android:id="@+id/navigation_user_routine"
        android:name="sg.edu.np.mad.happyhabit.ui.Routines.UserRoutineFragment"
        tools:layout="@layout/fragment_user_routine">

    </fragment>
    <fragment
        android:id="@+id/calorieTrackerFragment"
        android:name="sg.edu.np.mad.happyhabit.ui.CalorieTracker.CalorieTrackerFragment"
        android:label="CalorieTrackerFragment" />

</navigation>